fix leaderboard spacing by removing margin-top value

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -310,7 +310,6 @@ button {
 #high_scores {
     width: 100%;
     border-collapse: collapse;
-    margin-top: 10px;
     margin-bottom: 20px;
 
   }
